--- a/.env.template
+++ b/.env.template
@@ -5,3 +5,10 @@ USERNAME_DATABASE=
 DATABASE=
 PORT_DATABASE=
 HOST_DATABASE=
+
+JWT_SEED=
+
+SEND_EMAIL=
+MAILER_SERVICE=
+MAILER_EMAIL=
+MAILER_SECRET_KEY=
