--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "dotenv": "^16.4.7",
     "env-var": "^7.5.0",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.20"
@@ -23,7 +25,9 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.5",
+    "@types/nodemailer": "^6.4.17",
     "nodemon": "^3.1.9",
     "rimraf": "^6.0.1",
     "ts-node-dev": "^2.0.0",
